--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/kopring?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=jcw
+spring.datasource.password=1234
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.mode=always
